@@ -21,6 +21,7 @@ added: you can use css like selectors for class in navigation: 'p.title' will
       In order to preserve backward compatibility and to allow the use of
       elements with a dot in their name, if there are already parsed elements
       with a tag name of 'p.title' then they will be selected instead
+added: you can also use css class selectors in trigger handlers. 
 fix:  RT #51432 attributes containing quote character don't escape properly
       found, and patch provided by Jeremy Kahn
       https://rt.cpan.org/Ticket/Display.html?id=51432
@@ -62,6 +63,7 @@ fix:  improved speed when parsing big elements, RT#35672, reported by Seth
       http://rt.cpan.org/Ticket/Display.html?id=35672
 fix:  RT #47257, minor doc bug, spotted by David Steinbrunner
       http://rt.cpan.org/Ticket/Display.html?id=47257
+fix:  bug in navigation conditions of the form elt[text()=~ /text with 'or' or 'and'/] 
 improved: speed, somewhat
 
 version: 3.32
